defi3_2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  labels:
    app: django
spec:
  replicas: 1  # Nombre de Pods pour l'application Django
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: [NomUtilisateurDockerHub]/[NomImageDjango]:v1  # Remplacez par votre image Docker pour Django
        ports:
        - containerPort: 8000  # Port de l'application Django
