api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: u-8ttzx
  labels:
    app: api
spec:
  replicas: 3                                # Nombre de répliques de pods API
  selector:
    matchLabels:
      app: api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api-container
        image: ithiam/api:12        
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000                
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: u-8ttzx
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8081                             # Port exposé pour le service API
      targetPort: 8000                       # Port de l'application API dans le conteneur
  type: ClusterIP
