defi3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: defi3
  namespace: u-8ttzx
  labels:
    app: defi3
spec:
  replicas: 3                                
  selector:
    matchLabels:
      app: defi3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: defi3
    spec:
      containers:
      - name: defi3
        image: ithiam/site_django:v5          
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000                
        resources:
          requests:
            cpu: "100m"                       
            memory: "100Mi"                   
          limits:
            cpu: "200m"                       
            memory: "200Mi"                   
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: defi3-service
  namespace: u-8ttzx
  labels:
    app: defi3
spec:
  selector:
    app: defi3
  ports:
    - protocol: TCP
      port: 8080                             # Port exposé par le service dans le cluster
      targetPort: 8000                       # Port de l'application Django dans le conteneur
  type: ClusterIP
