postgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  namespace: u-8ttzx
  labels:
    app: db
spec:
  replicas: 1                                # Pod unique pour la base de données
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres
        image: postgres:16
        ports:
        - containerPort: 5432
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: u-8ttzx
  labels:
    app: db
spec:
  selector:
    app: db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
