ingress_defi4.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: defi4-ingress               
  namespace: u-8ttzx                 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  
spec:
  rules:
  - host: "django.super.csc8567.luxbulb.org"  
    http:
      paths:
      - path: /                           
        pathType: Prefix                   
        backend:
          service:
            name: defi3-service            # Le service créé au défi 3
            port:
              number: 8080                 # Le port exposé par le service defi3-service
